<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hied_flipped"
    android:gravity="center_horizontal"
    android:onClick="launchRegistered"
    android:orientation="vertical"
    tools:context=".RegisteredActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="197dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/test_paper_icon_512" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/users_icon_32"
        android:ems="10"
        android:hint="@string/username"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/password_manager_icon_32"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/cnf_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/password_manager_icon_32"
        android:ems="10"
        android:hint="@string/cnf_password"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_cnfm"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/btn_color"
        android:text="@string/bn_cnf" />

    <LinearLayout
        android:id="@+id/registerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/not_reg"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:visibility="invisible" />

        <TextView
            android:id="@+id/yes_reg"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:clickable="true"
            android:onClick="launchRegistered"
            android:paddingLeft="40dp"
            android:text="@string/registered"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>